tests/en/errors/nonconst_size.salam
// EXPECT: E011
func main:
    mut n i32 = 3
    a i32[n] = [1, 2, 3]
end
